# SensorHub

./: .cursorrules  .gitignore  1  App.vue  LICENSE.txt  MIGRATION.md  README.md  VISUALIZATION_FEATURES.md  constants.ts  frontend-architecture.md  index.html  metadata.json  package-lock.json  package.json  start_all.cmd  start_backend.cmd  start_frontend.cmd  test_log_fix.js  test_log_fix.ts  tsconfig.json  types.ts
backend/: .env.example  config.json  pyproject.toml  test_api_fix.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: dependencies.py
backend/app/core/: config.py  database.py  logger.py  security.py  seed.py
backend/app/crud/: device_mapping.py  file.py  parse_result.py
backend/app/models/: __init__.py  device_mapping.py  dictionary.py  parse_result.py  sensor_file.py  user.py
backend/app/schemas/: api_models.py
backend/app/services/: device_import.py  file_service.py  log_parsing_service.py  metadata.py  metadata_parser.py  parse_progress.py  parser.py  parser_legacy.py  parser_types.py  parser_v2.py  parser_worker.py  storage.py
backend/app/services/data_structures/: __init__.py  base_info.py  psp_data.py  (+3 more)
backend/scripts/: smoke_parser_router.py
backend/test/: check_db.py  check_db_v2.py  check_last_upload.py  db_dump.txt  debug_suffix.py  inspect_zip.py  migrate_db.py  migrate_db_v2.py  reproduce_issue.py  reproduce_upload_issue.py  test_db.py  test_large_zip.py  test_metadata_integration.py  test_real_upload.py  test_upload_validation.py  verify_storage.py  verify_zip_logic.py
backend/tests/: verify_rebuild.py
(+114 files in other folders)
