[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
    "pyarrow>=23.0.0",
    "pandas>=3.0.0",
    "sqlmodel>=0.0.31",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.2",
    "zstandard>=0.25.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
